--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/styles.css" />
+
+    <script src="https://kit.fontawesome.com/a290182793.js"></script>
+
     <title>hDC Host</title>
   </head>
   <body>
@@ -13,7 +17,6 @@
         <a href="#">
           <img class="logo" src="img/hdchostlogo.png" alt="Logo do HDC" />
         </a>
-        
 
         <nav>
           <ul class="navbar-items">
@@ -25,7 +28,122 @@
       </header>
 
       <main>
-        <div class="circle"></div>
+        <section class="banner">
+          <h1>hDC Host</h1>
+
+          <strong>Os melhores planos para qualquer tipo de projeto!</strong>
+        </section>
+
+        <section class="specialties-container">
+          <ul>
+            <li>
+              <i class="fas fa-shield-alt"></i>
+              <h3>Segurança</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla,
+                in fringilla arcu.
+              </p>
+            </li>
+            <li>
+              <i class="fas fa-rocket"></i>
+              <h3>Velocidade</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla,
+                in fringilla arcu.
+              </p>
+            </li>
+            <li>
+              <i class="fas fa-comments"></i>
+              <h3>Suporte</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam
+                imperdiet quis mi ut scelerisque. Phasellus et venenatis nulla,
+                in fringilla arcu.
+              </p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="cards">
+          <div class="cards-title-description">
+            <h3>Planos e Preços</h3>
+
+            <p>Selecione o plano perfeito para você</p>
+          </div>
+
+          <ul>
+            <li>
+              <div class="card">
+                <header>
+                  <div class="price"><strong>R$ 550</strong></div>
+
+                  <h3>Padrão</h3>
+                </header>
+
+                <div class="card_content">
+                  <span>test</span>
+                </div>
+
+                <footer>
+                  <button>Comprar</button>
+                </footer>
+              </div>
+            </li>
+            <li>
+              <div class="card">
+                <header>
+                  <div class="price"><strong>R$ 550</strong></div>
+
+                  <h3>Padrão</h3>
+                </header>
+
+                <div class="card_content">
+                  <strong>test</strong>
+                </div>
+
+                <footer>
+                  <button>Comprar</button>
+                </footer>
+              </div>
+            </li>
+            <li>
+              <div class="card">
+                <header>
+                  <div class="price"><strong>R$ 550</strong></div>
+
+                  <h3>Padrão</h3>
+                </header>
+
+                <div class="card_content">
+                  <strong>test</strong>
+                </div>
+
+                <footer>
+                  <button>Comprar</button>
+                </footer>
+              </div>
+            </li>
+            <li>
+              <div class="card">
+                <header>
+                  <div class="price"><strong>R$ 550</strong></div>
+
+                  <h3>Padrão</h3>
+                </header>
+
+                <div class="card_content">
+                  <strong>test</strong>
+                </div>
+
+                <footer>
+                  <button>Comprar</button>
+                </footer>
+              </div>
+            </li>
+          </ul>
+        </section>
       </main>
 
       <footer></footer>
