--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>hDC Host</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="./css/global.css">
+	<link rel="stylesheet" type="text/css" href="./css/styles.css">
 	<script src="https://kit.fontawesome.com/a290182793.js"></script>
 </head>
 <body>
